modules/vpc/subnets.tf
resource "aws_subnet" "public" {
    for_each = var.public_subnets

    vpc_id            = aws_vpc.this.id
    cidr_block        = each.value.cidr
    availability_zone = each.value.az
    map_public_ip_on_launch = true
    tags = {Name ="${var.vpc_name}-public-${each.key}"}
}
resource "aws_subnet" "private" {
    for_each = var.private_subnets
    vpc_id            = aws_vpc.this.id
    cidr_block        = each.value.cidr
    availability_zone = each.value.az
    map_public_ip_on_launch = false
    tags = {Name ="${var.vpc_name}-private-${each.key}"}
}
